--- a/auth_service/build.gradle
+++ b/auth_service/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 tasks.named('test') {
