Adding logic for recipe service

--- a/recipe_management_service/build.gradle
+++ b/recipe_management_service/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'
-
+    implementation group: 'org.springframework', name: 'spring-webflux', version: '6.2.0'
 }
 
 
