--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.com.example=DEBUG
+
+logging.file.name=log/application.log
