--- a/machine_service/src/main/resources/application.properties
+++ b/machine_service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql: true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.com.example=DEBUG
+
+logging.file.name=log/application.log
