--- a/recipe_management_service/src/main/resources/application.properties
+++ b/recipe_management_service/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.jpa.show-sql: true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-server.port=8081
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.com.example=DEBUG
+
+logging.file.name=log/application.log
