--- a/recipe_management_service/src/main/resources/application.properties
+++ b/recipe_management_service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org.springframework=INFO
 logging.level.com.example=DEBUG
 
 logging.file.name=log/application.log
+
+server.port=8081
