--- a/api_gateway/build.gradle
+++ b/api_gateway/build.gradle
@@ -31,6 +31,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
