--- a/client/build.gradle
+++ b/client/build.gradle
@@ -34,6 +34,8 @@ javafx {
 }
 
 dependencies {
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.2'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2'
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
