--- a/client/build.gradle
+++ b/client/build.gradle
@@ -36,6 +36,12 @@ javafx {
 dependencies {
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.2'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2'
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
+  compileOnly 'org.projectlombok:lombok:1.18.36'
+  annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+  implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.0'
+  implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.0'
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
