--- a/planning_service/src/main/resources/application.properties
+++ b/planning_service/src/main/resources/application.properties
@@ -12,3 +12,5 @@ logging.level.org.springframework=INFO
 logging.level.com.example=DEBUG
 
 logging.file.name=log/application.log
+
+server.port=8085
