plannig view -> in development

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.cloud.gateway.routes[3].uri=http://resource-service:8084/api/v1/resources
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/resources/**
 
 spring.cloud.gateway.routes[4].id=planning-service
-spring.cloud.gateway.routes[4].uri=http://planning-service:8085/api/v1/jobs
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/jobs/**
+spring.cloud.gateway.routes[4].uri=http://planning-service:8085/api/v1/planning
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/planning/**
