--- a/auth_service/build.gradle
+++ b/auth_service/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
     implementation group: 'org.hibernate.orm', name: 'hibernate-envers', version: '6.6.4.Final'
+    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.6.4.Final'
 
 }
 
