--- a/recipe_management_service/build.gradle
+++ b/recipe_management_service/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'
     implementation group: 'org.springframework', name: 'spring-webflux', version: '6.2.0'
     implementation group: 'org.hibernate.orm', name: 'hibernate-envers', version: '6.6.4.Final'
+    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.6.4.Final'
 
 }
 
