--- a/reporting_service/build.gradle
+++ b/reporting_service/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'
     implementation group: 'org.hibernate.orm', name: 'hibernate-envers', version: '6.6.4.Final'
     implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.6.4.Final'
+    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.5'
+    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.4'
 
 }
 
