--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.cloud.gateway.routes[4].id=planning-service
 spring.cloud.gateway.routes[4].uri=http://planning-service:8085/api/v1/planning
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/planning/**
 spring.cloud.gateway.routes[5].id=reporting-service
-spring.cloud.gateway.routes[5].uri=http://planning-service:8086/api/v1/reporting
+spring.cloud.gateway.routes[5].uri=http://reporting-service:8086/api/v1/reporting
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v1/reporting/**
